<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_universal">

    <EditText
        android:id="@+id/tv_search"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:hint="@string/search_hint"
        android:textColorHint="#5672C3"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="80dp"
        android:inputType="text"
        android:textColor="@color/white"
        android:imeOptions="actionSearch"
        android:singleLine="true"
        android:background="@drawable/background_search"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="true" />

    <ImageView
        android:id="@+id/icon_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_main_more"
        android:paddingStart="6dp"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="@id/tv_search"
        app:layout_constraintBottom_toBottomOf="@id/tv_search"
        app:layout_constraintRight_toRightOf="@id/tv_search"/>

    <ImageView
        android:id="@+id/icon_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_main_search"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingEnd="6dp"
        android:paddingBottom="12dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="@id/tv_search"
        app:layout_constraintBottom_toBottomOf="@id/tv_search"
        app:layout_constraintRight_toLeftOf="@id/icon_more"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_search"
        app:layout_constraintBottom_toTopOf="@id/menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_tiktok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url_tiktok"
                android:textColor="#FFFFFFFF"
                android:gravity="center_horizontal"
                android:drawablePadding="4dp"
                app:drawableTopCompat="@mipmap/icon_main_tiktok"
                android:layout_weight="1"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/tv_instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url_instagram"
                android:textColor="#FFFFFFFF"
                android:gravity="center_horizontal"
                android:drawablePadding="4dp"
                app:drawableTopCompat="@mipmap/icon_main_instagram"
                android:layout_weight="1"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/tv_vimeo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url_vimeo"
                android:textColor="#FFFFFFFF"
                android:gravity="center_horizontal"
                android:drawablePadding="4dp"
                app:drawableTopCompat="@mipmap/icon_main_vimeo"
                android:layout_weight="1"
                android:textSize="13sp"/>
            <TextView
                android:id="@+id/tv_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url_twitter"
                android:textColor="#FFFFFFFF"
                android:gravity="center_horizontal"
                android:drawablePadding="4dp"
                app:drawableTopCompat="@mipmap/icon_main_twitter"
                android:layout_weight="1"
                android:textSize="13sp"/>
        </LinearLayout>
        <FrameLayout
            android:id="@+id/fragment_ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="236dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="132dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/view_menu" android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>