<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="292dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_setting"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_history"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp"
            android:drawablePadding="31dp"
            android:layout_marginTop="14dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:drawableStartCompat="@drawable/icon_main_history"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_add"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp"
            android:drawablePadding="31dp"
            android:layout_marginTop="28dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_history"
            app:layout_constraintLeft_toLeftOf="parent"
            app:drawableStartCompat="@drawable/icon_main_add"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/tv_bookmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_bookmarks"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp"
            android:drawablePadding="31dp"
            android:layout_marginTop="28dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_add"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:drawableStartCompat="@drawable/icon_main_bookmarks"
            android:gravity="center_vertical"/>


        <ImageView
            android:id="@+id/icon_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_close"
            android:layout_margin="12dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>